--- a/Views/PI/ContratoCesion.cshtml
+++ b/Views/PI/ContratoCesion.cshtml
@@ -101,7 +101,8 @@
                                     </div>
                                 </text>).Caption("ACCIONES").Width(150);
                                 columns.AddFor(m => m.nombre).CellTemplate(@<text>
-                                    <% if (data.activo == false) { %>
+                                    @*<% if (data.activo == false) { %>*@
+                                    <% if (data.cesion_usado == 1) { %>
                                     <div>
                                         <span class="dx-active-off"></span>
                                         <%- value %>
@@ -115,6 +116,9 @@
                                 </text>).Caption("Nombre");
                                 columns.AddFor(m => m.cedente_nombre).Caption("Cedente");
                                 columns.AddFor(m => m.cesionario_nombre).Caption("Cesionario");
+                                columns.AddFor(m => m.numero_expediente).Caption("No. Expediente");
+                                columns.AddFor(m => m.clase_nombre).Caption("Clase");
+                                columns.AddFor(m => m.pais_nombre).Caption("Pais");
                             })
                             .ColumnAutoWidth(true)
                             .SearchPanel(p => p.Visible(true).Placeholder("Buscar"))
