ajustes licencia-cesion-registroMarca

--- a/Views/PI/ContratoCesion.cshtml
+++ b/Views/PI/ContratoCesion.cshtml
@@ -113,7 +113,7 @@
                                         <%- value %>
                                     </div>
                                     <% } %>
-                                </text>).Caption("Nombre");
+                                </text>).Caption("Nombre (Marca, Patente, Aviso Comercial, Modelo Industrial, Modelo Utilidad, Diseño Industrial, Obra Atistica)");
                                 columns.AddFor(m => m.cedente_nombre).Caption("Cedente");
                                 columns.AddFor(m => m.cesionario_nombre).Caption("Cesionario");
                                 columns.AddFor(m => m.numero_expediente).Caption("No. Expediente");
