--- a/Views/PI/RegistroMarca.cshtml
+++ b/Views/PI/RegistroMarca.cshtml
@@ -920,9 +920,17 @@
                                         <div class="col-md-3">
                                             <div class="form-group" id="uu_33_c">
                                                 <label>
-                                                    Oficio de renovación
+                                                    Fecha de oficio de renovación
                                                 </label>
                                                 <input type="text" class="form-control input-sm" id="uu_33" autocomplete="off" readonly />
+                                            </div>
+                                        </div>
+                                        <div class="col-md-3">
+                                            <div class="form-group" id="uu_41_c">
+                                                <label>
+                                                    Nueva fecha de vencimiento
+                                                </label>
+                                                <input type="text" class="form-control input-sm" id="uu_41" autocomplete="off" readonly />
                                             </div>
                                         </div>
                                     </div>
@@ -931,7 +939,7 @@
                                     <div class="row">
                                         <div class="col-md-12">
                                             <div class="form-group" id="oficiot" style="margin:0 !important;">
-                                                <label>Oficio</label>
+                                                <label>Oficio de renovación</label>
                                             </div>
                                             <div class="form-group" id="oficioc">
                                                 <a href="" id="oficiol" class="btn btn-sm btn-success"><i class="fa fa-download"></i> Descargar documento</a>
