--- a/Views/PI/RegistroMarca.cshtml
+++ b/Views/PI/RegistroMarca.cshtml
@@ -605,12 +605,12 @@
                                         <input type="text" value="" class="form-control input-sm" id="ces_04" autocomplete="off" disabled />
                                     </div>
                                 </div>
-                                <div class="col-md-3" id="ces_2_c" style="display:none;">
+                                @*<div class="col-md-3" id="ces_2_c" style="display:none;">
                                     <div class="form-group">
                                         <label>Fecha de vencimiento</label>
                                         <input type="text" value="" class="form-control input-sm" id="ces_02" autocomplete="off" disabled />
                                     </div>
-                                </div>
+                                </div>*@
                                 <div class="col-md-10" id="ces_3_c" style="display:none;">
                                     <div class="form-group">
                                         <label>Observaciones</label>
