--- a/Views/PI/RegistroMarcas.cshtml
+++ b/Views/PI/RegistroMarcas.cshtml
@@ -93,13 +93,14 @@
                             ()
                             .ID("tabla01")
                             .ShowBorders(true)
-                            .Paging(paging => paging.PageSize(20))
+                            .Scrolling(scrolling => scrolling.RowRenderingMode(GridRowRenderingMode.Virtual))
+                            .Paging(paging => paging.PageSize(10))
                             .Pager(pager =>
                             {
                                 pager.Visible(true);
                                 //pager.DisplayMode(GridPagerDisplayMode.Full);
                                 pager.ShowPageSizeSelector(true);
-                                //pager.AllowedPageSizes(new JS("[5, 10, 'all']"));
+                                //pager.AllowedPageSizes(new JS("[5, 10, '20']"));
                                 pager.ShowInfo(true);
                                 pager.ShowNavigationButtons(true);
                             })
@@ -116,20 +117,7 @@
                                         </div>
                                     </div>
                                 </text>).Caption("ACCIONES").Width(150);
-                                @*columns.AddFor(m => m.solicitud_tipo_desc).Caption("TIPO DE SOLICITUD");
-                                columns.AddFor(m => m.nombre).CellTemplate(@<text>
-                                    <% if (data.activo == false) { %>
-                                    <div>
-                                        <span class="dx-active-off"></span>
-                                        <%- value %>
-                                    </div>
-                                    <% } else { %>
-                                    <div>
-                                        <span class="dx-active-on"></span>
-                                        <%- value %>
-                                    </div>
-                                    <% } %>
-                                </text>).Caption("NOMBRE");*@
+                                @*columns.AddFor(m => m.solicitud_tipo_desc).Caption("TIPO DE SOLICITUD");*@
                                 columns.AddFor(m => m.solicitud_tipo_desc).CellTemplate(@<text>
                                     <% if (data.activo == false) { %>
                                     <div>
