--- a/Views/PI/RegistroMarca.cshtml
+++ b/Views/PI/RegistroMarca.cshtml
@@ -942,7 +942,8 @@
                                                 <label>Oficio de renovación</label>
                                             </div>
                                             <div class="form-group" id="oficioc">
-                                                <a href="" id="oficiol" class="btn btn-sm btn-success"><i class="fa fa-download"></i> Descargar documento</a>
+                                                @*<a href="" id="oficiol" class="btn btn-sm btn-success"><i class="fa fa-download"></i> Descargar documento</a>*@
+                                                <a href="" id="oficiol" class="btn btn-sm btn-success"><i class="fa fa-download"></i> Descargar</a>
                                                 <label for="oficio" class="btn btn-sm btn-info btn-lbl"><i class="fa fa-upload"></i> Seleccionar archivo</label>
                                                 <input type="file" id="oficio" style="display:none;" />
                                             </div>
