--- a/Views/PI/ContratoCesion.cshtml
+++ b/Views/PI/ContratoCesion.cshtml
@@ -116,7 +116,7 @@
                                 </text>).Caption("Nombre (Marca, Patente, Aviso Comercial, Modelo Industrial, Modelo Utilidad, Diseño Industrial, Obra Atistica)");
                                 columns.AddFor(m => m.cedente_nombre).Caption("Cedente");
                                 columns.AddFor(m => m.cesionario_nombre).Caption("Cesionario");
-                                //columns.AddFor(m => m.numero_registro).Caption("No. Registro");
+                                columns.AddFor(m => m.numero_registro).Caption("No. Registro");
                                 columns.AddFor(m => m.numero_expediente).Caption("No. Expediente");
                                 columns.AddFor(m => m.clase_nombre).Caption("Clase");
                                 columns.AddFor(m => m.pais_nombre).Caption("Pais");
