--- a/Views/PI/RegistroMarca.cshtml
+++ b/Views/PI/RegistroMarca.cshtml
@@ -316,6 +316,12 @@
                                             <input type="text" class="form-control input-sm" id="notificacion_vencimiento" autocomplete="off" />
                                         </div>
                                     </div>
+                                    <div class="col-md-3">
+                                        <div class="form-group" id="notificacion_estatusc">
+                                            <label>Correo de notificación de estatus</label>
+                                            <input type="text" class="form-control input-sm" id="notificacion_estatus" autocomplete="off" />
+                                        </div>
+                                    </div>
                                 </div>
                                 @*<div class="row" id="uso_check">
                                     <div class="col-md-4">
