--- a/Views/PI/RecordatorioPI.cshtml
+++ b/Views/PI/RecordatorioPI.cshtml
@@ -100,7 +100,7 @@
                                         <button type="button" class="dx-oc-link" onclick="Editar(<%- value %>)"><i class="fa fa-edit"></i></button>
                                     </div>
                                 </text>).Caption("ACCIONES").Width(150);
-                                columns.AddFor(m => m.descripcion).CellTemplate(@<text>
+                                columns.AddFor(m => m.nombre).CellTemplate(@<text>
                                     <% if (data.activo == false) { %>
                                     <div>
                                         <span class="dx-active-off"></span>
@@ -112,7 +112,8 @@
                                         <%- value %>
                                     </div>
                                     <% } %>
-                                </text>).Caption("Descripción");
+                                </text>).Caption("Nombre");
+                                columns.AddFor(m => m.descripcion).Caption("Descipción");
                                 columns.AddFor(m => m.asignado_nombre).Caption("Asignado");
                                 columns.AddFor(m => m.fecha_recordatorio).Caption("Fecha").Format("dd/MM/yyyy");
                             })
@@ -141,6 +142,10 @@
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
                 <div class="modal-body">
+                    <div class="form-group" id="uu_07_c">
+                        <label>Nombre</label>
+                        <input type="text" class="form-control input-sm" id="uu_07" autocomplete="off" value="" />
+                    </div>
                     <div class="form-group" id="uu_01_c">
                         <label for="uu_01">Asignado</label>
                         <select class="select2 form-control input-sm custom-select" id="uu_01" autocomplete="off" style="width: 100%;">
